--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ roaring = "0.8.1"
 croaring = "0.5.1"
 show-image = "0.10.1"
 image = "0.24.1"
+flexbuffers = "2.0.0"
+serde = "1.0.136"
+binwrite = "0.2.1"
