--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 
 [dependencies]
 bio = "0.39.2"
-roaring = "0.8.1"
-croaring = "0.5.1"
 show-image = "0.10.1"
 image = "0.24.1"
 flexbuffers = "2.0.0"
@@ -18,3 +16,4 @@ bincode = "1.3.3"
 bitvec = "1"
 byteorder = "1.4.3"
 vint64 = "1.0.1"
+clap = { version = "3.1.6", features = ["derive"] }
